--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "node dist/index.js",
     "build": "tsc",
-    "dev": "nodemon --exec ts-node src/index.ts"
+    "dev": "nodemon --exec ts-node src/index.ts",
+    "prisma:generate": "npx prisma generate",
+    "prisma:migrate-dev": "npx prisma migrate dev"
   },
   "keywords": [],
   "author": "",
@@ -18,11 +20,14 @@
     "@typescript-eslint/parser": "^5.7.0",
     "eslint": "^8.4.1",
     "nodemon": "^2.0.15",
+    "prisma": "^3.6.0",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "@prisma/client": "^3.6.0",
     "ejs": "^3.1.6",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "google-auth-library": "^7.11.0"
   }
 }
