--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_sign_in: ^5.2.1
   http: ^0.13.4
+  url_launcher: ^6.0.17
 
 dev_dependencies:
   flutter_test:
