--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   google_sign_in: ^5.2.1
   http: ^0.13.4
   url_launcher: ^6.0.17
+  font_awesome_flutter: ^9.2.0
 
 dev_dependencies:
   flutter_test:
