aggiunte icone e notifiche

--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   http: ^0.13.4
   url_launcher: ^6.0.17
   font_awesome_flutter: ^9.2.0
+  flutter_local_notifications: ^9.2.0
 
 dev_dependencies:
   flutter_test:
