--- a/frontend/android/app/src/main/AndroidManifest.xml
+++ b/frontend/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.gruppo43.gofundleaf">
    <application
-        android:label="gofundleaf"
+        android:label="GoFundLeaf"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
