--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:14
 WORKDIR /usr/app/backend
-COPY package*.json .
+COPY package*.json ./
 RUN npm install
 COPY . .
 RUN npm run prisma:generate
